# las

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
capi/: las_capi.cc  las_capi.h
cmake/: FindPARMETIS.cmake  FindPETSc.cmake  FindScorec.cmake  FindZOLTAN.cmake  lasConfig.cmake.in  libScorec.pc.in
core/: CMakeLists.txt  lasCSRCore.cc  lasCSRCore.h  lasCore.cc  lasCore.h  lasCorePETSc.cc  lasCorePETSc.h  lasCorePETSc_impl.h  lasCoreSharing.cc  lasCoreSharing.h  lasSparseCore.cc  lasSparseCore.h
cusparse/: lasCuSparse.h  lasCuSparse_impl.h
scripts/: bgq-env.sh  bgq-timing-batch.sh  config.sh  config_bgq.sh  config_dcs.sh  config_erp.sh  timing-tests.sh
sparskit/: CMakeLists.txt
src/: CMakeLists.txt  las.cc  las.h  lasAlloc.h  lasCSR.cc  lasCSR.h  lasCSRBuilder.cc  lasCSRBuilder.h  lasCSRBuilder_impl.h  lasCSRCore.cc  lasCSR_impl.h  lasComm.cc  lasComm.h  lasComm.h.in  lasConfig.h  lasConfig.h.in  lasCorePETSc.h  lasCuSparse.h  lasCuSparse_impl.h  lasDebug.h  lasDense.cc  lasDense.h  lasDense_impl.h  lasInline.h  lasKokkos.h  lasKokkos_impl.h  lasNNZ.h  lasPETSc.cc  lasPETSc.h  lasPETSc_impl.h  lasScalar.h  lasSparse.cc  lasSparse.h  lasSparseDense.cc  lasSparseDense.h  lasSparse_impl.h  lasSparskit.cc  lasSparskit.h  lasSparskitExterns.cc  lasSparskitExterns.h  (+3 more)
src/capi/: las_capi.cc  las_capi.h
test/: CMakeLists.txt  csr.cc  cusparse.cc  dense.cc  petsc_hard.cc  petsc_virt.cc  petsc_virt.h  small.mtx  small_symm_matrix.mtx  sparse.cc  test.cc  test_small.cc  test_solve.cc  timer.h
test/meshes/cube_1/: cube_240.smb
test/meshes/cube_2/: cube_240.smb  cube_241.smb
test/meshes/cube_4/: cube_24_4part_0.smb  cube_24_4part_1.smb  cube_24_4part_2.smb  cube_24_4part_3.smb
test/models/: cube_test.smd
