find_package(SCOREC REQUIRED)

set(las_core_install lasCSRCore.h)
set(las_core_headers )
set(las_core_sources lasCSRCore.cc)

find_package(MPI)
if(MPI_FOUND)
  set(USE_MPI 1)
  include_directories(SYSTEM ${MPI_INCLUDE_DIRS})
  set(link_libs ${MPI_LIBRARIES})
else()
  set(USE_MPI 0)
endif()


find_package(PETSc)
if(PETSC_FOUND)
  set(las_core_petsc_install lasCorePETSc.h)
  set(las_core_petsc_sources lasCorePETSc.cc)
  set(las_core_install ${las_core_install} ${las_core_petsc_install})
  set(las_core_sources ${las_core_sources} ${las_core_petsc_sources})
  set(link_libs ${link_libs} ${PETSC_LIBRARIES})
  set(include_dirs ${include_dirs} ${PETSC_INCLUDE_DIRS})
endif()

add_library(las_core STATIC ${las_core_sources})
if(${CMAKE_VERSION} VERSION_GREATER "3.8.2")
  #target_compile_features(las_core PUBLIC cxx_std_11)
endif()
if(MPI_COMPILE_FLAGS)
  set_target_properties(las_core PROPERTIES COMPILE_FLAGS ${MPI_CXX_COMPILE_DEFINITIONS})
endif()
if(MPI_LINK_FLAGS)
  set_target_properties(las_core PROPERTIES LINK_FLAGS ${MPI_CXX_LINK_FLAGS})
endif()
set_target_properties(las_core PROPERTIES PUBLIC_HEADER "${las_core_install}")
target_include_directories(las_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<INSTALL_INTERFACE:include> ${include_dirs})
target_link_libraries(las_core PUBLIC las SCOREC::apf ${link_libs})
install(TARGETS las_core EXPORT las_coreConfig LIBRARY DESTINATION lib ARCHIVE DESTINATION lib PUBLIC_HEADER DESTINATION include)
install(EXPORT las_coreConfig DESTINATION lib/cmake)
