function(add_mpi_test name file no_mpi_proc)
  message(STATUS "Adding mpi test " ${name})
  add_executable(${name} ${file})
  target_compile_features(${name} PUBLIC cxx_std_11)
  target_include_directories(${name} PUBLIC ${test_header_dir})
  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    get_target_property(FLGS ${name} LINK_FLAGS_DEBUG)
    if(FLGS STREQUAL "FLGS-NOTFOUND")
      SET(FLGS "") # set to empty string
    endif()
    SET(FLGS "${FLGS} ${GCC_COVERAGE_LINK_FLAGS}" )
    set_target_properties(${name} PROPERTIES LINK_FLAGS_DEBUG ${FLGS} )
  endif()
  set(test_parameters -np ${no_mpi_proc} ${name} ${ARGN})
  add_test(NAME ${name} COMMAND "mpirun" ${test_parameters} )
endfunction(add_mpi_test)

function(simple_test name file)
  message(STATUS "Adding test " ${name})
  add_executable(${name} ${file})
  target_compile_features(${name} PUBLIC cxx_std_11)
  add_test(NAME "${name}_test" COMMAND ${name})
endfunction(simple_test)

add_mpi_test(csr csr.cc 1)
target_link_libraries(csr las)

if(CUDA_FOUND)
  message(STATUS "Adding CUDA test cases:")
  simple_test(cusparse cusparse.cc)
  target_link_libraries(cusparse las)
  target_include_directories(cusparse PUBLIC ${CUDA_INCLUDE_DIRS})
endif()
